# 2025-Fall-UCF-RE-RASSOR-System-Autonomy

./: .gitignore  Dockerfile  README.md  debug_monitor.py  debug_server.py  demo_sim.py  fake_map.py  http_server.py  make_pi_image.sh  preflight.py  rassor_driver_subscriber.py  record_bag.py  rover_sim_server.py  send_wheel_command.py  setup.sh
2023-RE-RASSOR-Extension-cart_desktop/: .gitattributes  .gitignore  RASSOR IMG Guide.md  README.md  Requirements.md  package-lock.json  package.json  rassor_driver_subscriber.py
2023-RE-RASSOR-Extension-cart_desktop/ezrassor_controller/: App.js  forge.config.js  main.js  package-lock.json  package.json  preload.js
2023-RE-RASSOR-Extension-cart_desktop/ezrassor_rover/StepperTesting/: DRV8825.cpp
2023-RE-RASSOR-Extension-cart_desktop/ezrassor_rover/Systemctl Starter files/: 01-arduino.rules  ros2_start.sh
2023-RE-RASSOR-Extension-cart_desktop/ezrassor_rover/arduino_wheels/: DRV8825.cpp
2023-RE-RASSOR-Extension-cart_desktop/ezrassor_rover/ezrassor_controller_server/: setup.py
2023-RE-RASSOR-Extension-cart_desktop/ezrassor_rover/rassor_serial_forward/: setup.cfg
2023-RE-RASSOR-Extension-cart_desktop/ezrassor_rover/ros-scripts/: README.md
docs/: yolo_obstacle_detector.md
ezrassor_controller/: App.js  app.json  forge.config.js  main.js  package-lock.json  package.json  preload.js
ezrassor_controller/scripts/: make-mac.js  make-ubuntu.js  make-win.js  restore-main.js
ezrassor_controller/src/api/: ezrassor-service.js  web-commands.js  websocket-service.js
ezrassor_controller/src/styles/: video.js
src/ezrassor_description/: CMakeLists.txt  package.xml
src/ezrassor_description/launch/: robot_state_publisher.launch.py
src/ezrassor_description/urdf/: ezrassor.urdf.xacro
src/ezrassor_nav2/: CMakelists.txt  package.xml
src/ezrassor_nav2/src/: command_router.cpp  goal_relay_node.cpp  map_serializer.cpp  nav2_bridge_node.cpp  websocket_server.cpp
src/ezrassor_rover/StepperTesting/: DRV8825.h  StepperTesting.ino
src/ezrassor_rover/Systemctl Starter files/: 50-cloud-init.yaml  potato-discovery.service  restart-potato.sh  ros2-start-forwarder.service  ros2-start-processes.service  ros2_start_forwarder.sh
src/ezrassor_rover/arduino_shoulder/: arduino_shoulder.ino
src/ezrassor_rover/arduino_wheels/: arduino_wheels.ino
src/ezrassor_rover/ezrassor_controller_server/: package.xml  setup.cfg
src/nav2_first_steps/: CMakeLists.txt  package.xml
src/nav2_first_steps/src/: initial_pose_pub.cpp  nav2_client.cpp
src/re_rassor_bringup/: CMakeLists.txt  package.xml
src/re_rassor_bringup/config/: nav2_params.yaml  rf2o_params.yaml  slam_toolbox_params.yaml
src/re_rassor_bringup/launch/: autonomy.launch.py  demo_sim.launch.py  odometry.launch.py  re_rassor_full.launch.py  sensors.launch.py
src/re_rassor_bringup/maps/: my_map.pgm  my_map.yaml
src/re_rassor_cartography/: CMakeLists.txt
src/re_rassor_cartography/examples/: obstacle_map_example.cpp  simple_test.cpp
src/re_rassor_cartography/test/: obstacle_map_tests.cpp
src/re_rassor_computer_vision/: package.xml  setup.cfg  setup.py
src/re_rassor_computer_vision/re_rassor_computer_vision/: aruco_detector_node.py
src/re_rassor_controller_server/: package.xml  setup.cfg  setup.py
src/re_rassor_controller_server/re_rassor_controller_server/: __init__.py  command.py  controller_server.py  request.py  server.py
src/re_rassor_interfaces/msg/: YoloMsg.msg  (+1 more)
src/re_rassor_mission_control/: CMakeLists.txt  README.md  package.xml  re_rassor_mission_control.xml
src/re_rassor_mission_control/include/: mission_control.hpp
src/re_rassor_mission_control/src/: follow_waypoints_cli.cpp  mission_control.cpp  navigate_cli.cpp
src/re_rassor_mission_control/tests/: test.py
src/re_rassor_motor_controller/: CMakeLists.txt  package.xml
src/re_rassor_motor_controller/firmware/arduino_shoulder/: arduino_shoulder.ino
src/re_rassor_motor_controller/firmware/arduino_wheels/: DRV8825.cpp  DRV8825.h  arduino_wheels.ino
src/re_rassor_motor_controller/include/re_rassor_motor_controller/: motor_controller.hpp  serial_motor_controller.hpp
src/re_rassor_motor_controller/src/: motor_controller.cpp  serial_motor_controller.cpp  serial_motor_controller_main.cpp
src/re_rassor_motor_controller/test/: test_integration_e2e.py  test_motor_controller.cpp  test_motor_controller.py  test_serial_arduino_sim.cpp  test_with_python.py
src/re_rassor_obstacle_detection/: CMakeLists.txt  package.xml
src/re_rassor_obstacle_detection/config/: nav2_params.yaml
src/re_rassor_obstacle_detection/launch/: rtab.launch.py  slam_launch.py
src/re_rassor_obstacle_detection/rviz/: costmap.rviz
src/re_rassor_obstacle_detection/src/: depth_costmap_node.cpp  scan_to_costmap_node.cpp
src/re_rassor_pathing/: CMakeLists.txt  package.xml
src/re_rassor_pathing/include/: dstarlite.hpp  quadtree_costmap.hpp
src/re_rassor_pathing/src/: dstarlite.cpp
src/re_rassor_pathing/tests/: test_dstarlite.py
src/re_rassor_serial_hw/: package.xml  setup.cfg  setup.py
src/re_rassor_serial_hw/re_rassor_serial_hw/: serial_driver.py
src/re_rassor_simulation/: package.xml  setup.cfg  setup.py
src/re_rassor_simulation/config/: nav2_params_sim.yaml  ros_gz_bridge.yaml  slam_toolbox_params_sim.yaml
src/re_rassor_simulation/re_rassor_simulation/: nav2_debug.py  simulation_server.py
src/re_rassor_simulation/worlds/: rassor_world.sdf
src/re_rassor_test/: CMakeLists.txt  package.xml
src/re_rassor_test/config/: test_params.yaml
src/re_rassor_test/launch/: e2e_obstacle_detection.launch.py
src/re_rassor_test/models/rassor_astra/: model.config  model.sdf
src/re_rassor_test/scripts/: hw_command_relay.py  synthetic_camera_publisher.py
src/re_rassor_test/test/e2e/: test_e2e_gazebo.py
src/re_rassor_test/test/integration/: test_obstacle_detection_node.py  test_pipeline_bench.py
src/re_rassor_test/test/unit/: test_depth_math.cpp
src/re_rassor_test/worlds/: obstacle_test.world
src/re_rassor_traffic_controller/: CMakeLists.txt  package.xml
src/re_rassor_yolo_detector/: package.xml  setup.cfg  setup.py
(+58 files in other folders)
