<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ezrassor_nav2</name>
  <version>1.0.0</version>
  <description>
    Nav2 integration layer for EZRassor rover. Bridges ROS 2 Nav2 stack with
    the ezrassor_controller Electron/React GUI via WebSocket. Handles SLAM map
    streaming, path planning, and command routing to re_rassor_motor_controller.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Nav2 -->
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_common</depend>

  <!-- Map / SLAM -->
  <depend>nav2_map_server</depend>
  <depend>slam_toolbox</depend>

  <!-- Local packages -->
  <depend>re_rassor_interfaces</depend>

  <!-- WebSocket bridge (rosbridge) -->
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>ros2_web_bridge</exec_depend>

  <!-- Launch deps -->
  <exec_depend>re_rassor_bringup</exec_depend>
  <exec_depend>ezrassor_description</exec_depend>
  <exec_depend>re_rassor_motor_controller</exec_depend>

  <!-- Python (launch helpers) -->
  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>