<?xml version="1.0"?>
<package format="3">
  <name>re_rassor_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for RE-RASSOR autonomy stack.</description>

  <maintainer email="ri648527@ucf.edu">ricky</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>nav2_bringup</exec_depend>

  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_util</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
