<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>re_rassor_computer_vision</name>
  <version>1.0.0</version>
  <description>
    ArUco marker detection node for RE-RASSOR.
    Subscribes to the rover RGB camera, detects ArUco markers, and publishes
    annotated frames and JSON detection reports for the controller server.
  </description>
  <maintainer email="your.email@ucf.edu">RE-RASSOR Team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
