<?xml version="1.0"?>
<package format="3">
  <name>re_rassor_obstacle_detection</name>
  <version>0.0.1</version>
  <description>Depth + RGB + LaserScan + Costmap pipeline with WebSocket RGBD and RTAB-Map odometry</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS messages -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <!-- RViz viewer -->
  <exec_depend>rviz2</exec_depend>

  <!-- rtabmap — apt installed, exec_depend only (not compiled against) -->
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>

  <!-- WebSocket client (replaces libcurl) -->
  <!-- Install with: sudo apt install libwebsockets-dev -->
  <build_depend>libwebsockets-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>