<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>re_rassor_serial_hw</name>
  <version>1.0.0</version>
  <description>
    RE-RASSOR serial hardware driver. Subscribes to wheel/shoulder/drum Twist
    topics and forwards binary command bytes to the Arduino RAMPS 1.4 boards
    over POSIX serial (pyserial). Ported from 2023 rassor_serial_fwd.
  </description>
  <maintainer email="your.email@ucf.edu">RE-RASSOR Team</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
