<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>re_rassor_test</name>
  <version>0.1.0</version>
  <description>
    End-to-end, integration, and unit tests for the RE-RASSOR ROS 2 stack.
    Launches Gazebo Harmonic (gz sim) with a simulated depth camera, bridges
    camera topics via ros_gz_bridge, runs rtabmap SLAM + Nav2, and validates
    both camera data and hardware-command round-trips through hw_command_relay.
  </description>

  <maintainer email="team@re-rassor.org">RE-RASSOR Team</maintainer>
  <license>Apache-2.0</license>

  <!-- ── Build ─────────────────────────────────────────────────────────── -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ── Runtime ───────────────────────────────────────────────────────── -->
  <!-- Gazebo Harmonic bridge -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- TF / transforms -->
  <exec_depend>tf2_ros</exec_depend>

  <!-- SLAM + odometry -->
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>

  <!-- Nav2 -->
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <!-- Message types -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <!-- RE-RASSOR packages -->
  <exec_depend>re_rassor_bringup</exec_depend>
  <exec_depend>re_rassor_motor_controller</exec_depend>
  <exec_depend>re_rassor_interfaces</exec_depend>

  <!-- hw_command_relay Python node -->
  <exec_depend>rclpy</exec_depend>

  <!-- ── Test ───────────────────────────────────────────────────────────── -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>pytest</test_depend>

  <!-- ── Ament exports ──────────────────────────────────────────────────── -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>